UT2 Practica 2 | Terminada

--- a/UT2/Prac2/externa-css/diw_ut2_p22_index.html
+++ b/UT2/Prac2/externa-css/diw_ut2_p22_index.html
@@ -28,8 +28,8 @@
       </ul>
     </section>
 
-    <section>
-      <h2>Redes sociales</h2>
+    <h2>Redes sociales</h2>
+    <section class="tarjeta">
       <a href="youtube.com">Youtube</a>
       <a href="instagram.com">Instagram</a>
       <a href="x.com">X</a>
