--- a/UT2/Prac3/diw_ut2_p23/DIW_UT2_P23_inline.html
+++ b/UT2/Prac3/diw_ut2_p23/DIW_UT2_P23_inline.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8" />
   <title>Inline CSS</title>
 </head>
-<body>
-  <h1>Taller DIW: CSS Inline</h1>
-  <p>Texto con estilos aplicados en línea.</p>
+<body style="font-family: Arial, sans-serif; background-color: #f6f8fa;">
+  <h1 style="color: #0d47a1; margin-bottom: 0.25rem;">Taller DIW: CSS Inline</h1>
+  <p style="color: #555">Texto con estilos aplicados en línea.</p>
 
-  <div >
-    <h2>Caja con estilos inline</h2>
-    <a>Botón</a>
+  <div style="border: 1px solid #ccc; padding: 1rem; border-radius: 8px; background: #fff;">
+    <h2 style="color: #1b5e20">Caja con estilos inline</h2>
+    <a style="display: inline-block; padding: 0.5rem 1rem; text-decoration: none; border:1px solid #1b5e20">Botón</a>
   </div>
 
   <ul>
-    <li>Item A</li>
-    <li>Item B</li>
+    <li style="font-weight: bold;">Item A</li>
+    <li style="color: #c62828;">Item B</li>
   </ul>
 </body>
 </html>
