UT2 Practica 3 | parte 2 terminada

--- a/UT2/Prac3/diw_ut2_p23/DIW_UT2_P23_intern.html
+++ b/UT2/Prac3/diw_ut2_p23/DIW_UT2_P23_intern.html
@@ -3,16 +3,64 @@
 <head>
   <meta charset="UTF-8" />
   <title>CSS Interno</title>
- 
+  <style>
+
+    body {
+      font-family: system-ui, sans-serif;
+      background: #fafafa;
+      color:#333;
+    }
+
+    .tarjeta{
+      background: #fafafa;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      padding: 16px;
+      margin:12px 0;
+    }
+
+    #destacado{
+      background: #e3f2fd;
+    }
+
+    .titulo {
+      color: #1565c0;
+    }
+
+    .slogan {
+      color:#546e7a;
+    }
+
+    .boton {
+      display: inline-block;
+      padding: 5rem 1rem;
+      border: 1px solid #1565c0;
+      text-decoration: none;
+    }
+    
+    .item {
+      margin-bottom: .25rem;;
+    }
+
+    #importante {
+      color: #c62828;
+      font-weight: bold;
+    }
+
+    #cabecera {
+      border-bottom: 2px solid #1565c0;
+    }
+
+  </style>
 </head>
 <body>
-  <!-- Copia aquí el body de index.html o adapta el contenido -->
+
   <header id="cabecera">
     <h1 class="titulo">Taller DIW: CSS Interno</h1>
     <p class="slogan">Estilos en el documento</p>
   </header>
   <main>
-    <section class="tarjeta destacado">
+    <section class="tarjeta" id="destacado">
       <h2>Interno</h2>
       <p>Reglas compartidas en la cabecera del mismo HTML.</p>
       <a class="boton" href="#">Botón</a>
@@ -21,11 +69,12 @@
       <h2>Lista</h2>
       <ul>
         <li class="item">Elemento 1</li>
-        <li class="item importante">Elemento 2</li>
+        <li class="item" id="importante">Elemento 2</li>
         <li class="item">Elemento 3</li>
       </ul>
     </section>
   </main>
 </body>
+
 </html>
 
