--- a/UT2/Prac3/diw_ut2_p23/DIW_UT2_P23_index.html
+++ b/UT2/Prac3/diw_ut2_p23/DIW_UT2_P23_index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Comparación CSS</title>
+  <link rel="stylesheet" href="css/diw_ut2_p23_estilos.css">
  </head>
 <body>
   <header id="cabecera">
