UT2 Repaso Pseudo-classes | Terminado

--- a/UT2/Repaso/6_pseudo-classes/03-checked-toggle/index.html
+++ b/UT2/Repaso/6_pseudo-classes/03-checked-toggle/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <h1>:checked para mostrar/ocultar</h1>
-  <label><input type="checkbox" id="chk"> Mostrar detalles</label>
+  <input type="checkbox" id="chk">
+  <label for="chk">Mostrar detalles</label>
   <div class="detalles">Estos son los detalles ocultos</div>
 </body>
 </html>
