UT3 prac1 | Terminado

--- a/UT3/prac1/index31.html
+++ b/UT3/prac1/index31.html
@@ -1,3 +1,9 @@
+<!--
+
+En la carpeta img se encuentran las imágenes originales y optimizadas, al igual que el logotipo.svg
+
+-->
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -10,7 +16,7 @@
   <header class="site-header">
     <!-- TODO: insertar logo SVG -->
     <div class="logo">
-      <!-- <img src="img/logo.svg" alt="Logotipo del sitio" /> -->
+      <img src="img/logotipo.svg" alt="Logotipo del sitio" />
       <h1>Galería RA3</h1>
     </div>
     <p class="subtitle">Práctica 1: Imágenes optimizadas para la web</p>
@@ -164,22 +170,52 @@
 
     </table>
 
+    <h2>Antes y después de la optimización</h2>
+
+    <table>
+
+      <tr>
+        <th>Nombre de archivo</th>
+        <th>Dimensiones antes y después</th>
+        <th>Peso antes y después</th>
+      </tr>
+
+      <tr>
+        <td>wallpaper_optimizado.jpg</td>
+        <td><ul><li>Antes: 3840x2160px</li><li>Después: 1920x1080px</li></ul></td>
+        <td><ul><li>Antes: 1,81 MB</li><li>Después: 697 KB</li></ul></td>
+      </tr>
+
+      <tr>
+        <td>tokyo_optimizado.jpg</td>
+        <td><ul><li>Antes: 3840x2160px</li><li>Después: 1920x1080px</li></ul></td>
+        <td><ul><li>Antes: 1,26 MB</li><li>Después: 609 KB</li></ul></td>
+      </tr>
+
+      <tr>
+        <td>cyber_optimizado.jpg</td>
+        <td><ul><li>Antes: 1920x1080px</li><li>Después: 1920x1080px</li></ul></td>
+        <td><ul><li>Antes: 3,60 MB</li><li>Después: 123 KB</li></ul></td>
+      </tr>
+
+    </table>
+
     <section class="gallery">
       <h2>Galería de imágenes</h2>
       <div class="gallery-grid">
         <!-- TODO: Sustituir por las imágenes optimizadas -->
         <figure class="gallery-item">
-          <img src="img/foto1.jpg" alt="Descripción de la imagen 1" />
+          <img src="img/wallpaper_optimizado.jpg" alt="Descripción de la imagen 1" />
           <figcaption>Imagen 1 (optimizada)</figcaption>
         </figure>
 
         <figure class="gallery-item">
-          <img src="img/foto2.jpg" alt="Descripción de la imagen 2" />
+          <img src="img/tokyo_optimizado.jpg" alt="Descripción de la imagen 2" />
           <figcaption>Imagen 2 (optimizada)</figcaption>
         </figure>
 
         <figure class="gallery-item">
-          <img src="img/foto3.jpg" alt="Descripción de la imagen 3" />
+          <img src="img/cyber_optimizado.jpg" alt="Descripción de la imagen 3" />
           <figcaption>Imagen 3 (optimizada)</figcaption>
         </figure>
       </div>
@@ -206,5 +242,24 @@ Diferencia entre copyright y creative commons:
   La prinicpal diferencia es que el Copyright implica que el autor tiene todos los derechos reservados, mientra que, con creative commons
   el autor permite compartir su obra bajo ciertas condiciones, concediendo algunos derechos específicos a terceros.
 
+
+-->
+
+
+<!--
+
+Fuentes:
+
+Para el tipo de licencias he consultado las páginas oficiales en el apartado de licencia de cada uno.
+Para la comparación de imágenes la principal fuente ha sido Gemini de Google
+Para la creación del SVG he utilizado GIMP
+
+-->
+
+<!--
+
+Tiempo de carga:
+
+En cuanto al tiempo de carga la diferencia es mínima, ya que los tamaños son ligeros, habiendo un cambio de milésimas de segundos.
 
 -->
